<resources>
    <string name="app_name">MLMS Teacher</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="birthday">Birthday</string>
    <string name="password">Password</string>

    <string name="sign_in">Sign in</string>
    <string name="no_account">No account yet?</string>
    <string name="sign_up_here">Sign up here</string>

    <string name="sign_up">Sign up</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in_here">Sign in here</string>

    <string name="module_attendance">Check attendance</string>
    <string name="module_quiz">Manage Quiz</string>
    <string name="module_lesson">Lesson Plan</string>
    <string name="module_report">View class record</string>
    <string name="click_restore">Restore</string>
    <string name="click_backup">Backup</string>

    <string-array name="time_limit">
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <!--<item>Other</item>-->
    </string-array>

    <string-array name="options">
        <item>Option A</item>
        <item>Option B</item>
        <item>Option C</item>
        <item>Option D</item>
    </string-array>


</resources>
