<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAttendance"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/darkOliveGreen"
        android:text="@string/module_attendance"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnLesson"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/darkOliveGreen"
        android:text="@string/module_lesson"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnQuiz"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/darkOliveGreen"
        android:text="@string/module_quiz"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnRecords"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/darkOliveGreen"
        android:text="@string/module_report"
        android:textAllCaps="false" />

    <!--<Button-->
    <!--android:layout_width="300dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="16dp"-->
    <!--android:background="@color/darkOliveGreen"-->
    <!--android:text="@string/module_attendance"-->
    <!--android:textAllCaps="false" />-->


</LinearLayout>